--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,12 +14,11 @@
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">About</a>
-        github:
-          repository_url: http://LanguageAndTheInternet.github.io/about
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+        <a href="{{ site.github.zip_url }}" class="btn">About .zip</a>
+        github:
+          zip_url: http://LanguageAndTheInternet.github.io/about.html
       {% endif %}
     </section>
 
