--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">About</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">About .zip</a>
-        github:
-          zip_url: http://LanguageAndTheInternet.github.io/about.html
+        <a href="http://LanguageAndTheInternet.github.io/about.html" class="btn">About</a>
       {% endif %}
     </section>
 
