--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">About</a>
       {% endif %}
       {% if site.show_downloads %}
+        <a href="http://LanguageAndTheInternet.github.io/index.html" class="btn">Timeline</a>
         <a href="http://LanguageAndTheInternet.github.io/about.html" class="btn">About</a>
       {% endif %}
     </section>
