--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
       {% endif %}
       {% if site.show_downloads %}
         <a href="http://LanguageAndTheInternet.github.io/index.html" class="btn">Timeline</a>
+        <a href="http://LanguageAndTheInternet.github.io/terms.html" class="btn">Terms</a>
         <a href="http://LanguageAndTheInternet.github.io/about.html" class="btn">About</a>
       {% endif %}
     </section>
