--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,9 @@
         <a href="{{ site.github.repository_url }}" class="btn">About</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="http://LanguageAndTheInternet.github.io/index.html" class="btn">Timeline</a>
-        <a href="http://LanguageAndTheInternet.github.io/terms.html" class="btn">Terms</a>
-        <a href="http://LanguageAndTheInternet.github.io/about.html" class="btn">About</a>
+        <a href="http://LanguageAndTheInternet.github.io/index" class="btn">Timeline</a>
+        <a href="http://LanguageAndTheInternet.github.io/terms" class="btn">Terms</a>
+        <a href="http://LanguageAndTheInternet.github.io/about" class="btn">About</a>
       {% endif %}
     </section>
 
