--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,9 @@
 
     <section class="main-content">
       {{ content }}
+       <footer class="site-footer">
+        <span class="site-footer-credits"><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</span>
+      </footer>
     </section>
 
     {% if site.google_analytics %}
