--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
   </head>
   <body>
       <section class="page-header">
@@ -28,7 +27,7 @@
       {{ content }}
        <footer class="site-footer">
         <span class="site-footer-credits">This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</span>
-        <a href="https://languageandtheinternet.github.io/" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+        <a href="https://github.com/LanguageAndTheInternet/LanguageAndTheInternet.github.io" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
       </footer>
     </section>
 
