--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
       {{ content }}
        <footer class="site-footer">
         <span class="site-footer-credits">This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</span>
-        <a href="https://github.com/LanguageAndTheInternet/LanguageAndTheInternet.github.io" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+        <i class="fab fa-github fa-2x"></i>
       </footer>
     </section>
 
